refactoring to make sure we can load resources for dumps